featured block fixed color and gaps

--- a/styles/breads-types.css
+++ b/styles/breads-types.css
@@ -2,6 +2,14 @@
     padding: 90px 0 100px;
 }
 
+.our-bread__block{
+    padding: 90px 0 100px;
+}
+
+.our-bread__block .type__description{
+    color: var(our-bread-text-description);
+}
+
 .featured__title{
     font-family: 'Prata', serif;
     font-size: 36px;
@@ -18,7 +26,7 @@
 .featured__type {
     display:flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 10px;
     padding: 0 15px;
 }
 
